Fixed nav and wrapping metadata

--- a/src/css/_chapter.scss
+++ b/src/css/_chapter.scss
@@ -41,7 +41,7 @@
 
   .chapter_meta dt,
   .chapter_meta dd {
-    display: inline-block;
+    display: inline;
     -webkit-font-smoothing: antialiased;
   }
 
@@ -175,6 +175,8 @@
 
 
   &.fixed-background {
+    background-attachment: scroll;
+
     .background_credit {
       bottom: 0;
       left: 0;
