--- a/src/css/_nav.scss
+++ b/src/css/_nav.scss
@@ -27,11 +27,11 @@
   color: #fff;
   text-decoration: none;
   display: inline-block;
-  font-size: 13px;
+  font-size: 12px;
   float: left;
   min-height: 60px;
   display: none;
-  padding: 0 8px;
+  padding: 0 6px;
   cursor: pointer;
   -webkit-font-smoothing: antialiased;
 
